--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "chart",
 	"version": "1.0.0",
 	"main": "index.js",
+	"engines": {
+		"node": ">=20.0.0"
+	},
 	"scripts": {
 		"start": "vite",
 		"build": "vite build",
@@ -11,6 +14,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"terser": "^5.36.0",
 		"tslib": "^2.8.1",
 		"vite": "^6.0.2",
 		"vite-bundle-visualizer": "^1.2.1"
